--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/rest-bundle": "^2.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "php-amqplib/rabbitmq-bundle": "^1.12",
         "sensio/distribution-bundle": "^5.0",
@@ -27,9 +28,13 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
-        "twig/twig": "^1.0||^2.0"
+        "tbbc/money-bundle": "^3.1",
+        "twig/twig": "^1.0||^2.0",
+        "winzou/state-machine-bundle": "^0.3.0"
     },
     "require-dev": {
+        "phpspec/phpspec": "^3.3",
+        "phpunit/phpunit": "^5.0",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
